--- a/SitioWebOrtopediaVelásquez/Views/Home/_ParcialViewCatalogoO.cshtml
+++ b/SitioWebOrtopediaVelásquez/Views/Home/_ParcialViewCatalogoO.cshtml
@@ -1,7 +1,7 @@
 ﻿@model List<ortesis>
 
 
-@{ if (Model == null)
+@if (Model == null)
     {
         <br />
         <img src="~/Content/img/Error.png" class="ml-auto mr-auto d-block" /><br />
@@ -9,7 +9,6 @@
         <br /><br /><br />
         return;
     }
-}
 @{ if (Model.Count == 0)
     {
         <br />
