--- a/SitioWebOrtopediaVelásquez/Views/Shared/_Layout.cshtml
+++ b/SitioWebOrtopediaVelásquez/Views/Shared/_Layout.cshtml
@@ -69,11 +69,11 @@
 
                         </div>
                     </div>
-                 
+
                 </div>
+                <p class="alert alert-danger w-85 ml-auto mr-auto d-block d-none" id="Error">Usuario y/o contraseña incorrecto</p>
                 <div class="modal-footer d-flex justify-content-center" id="m-footer-login">
                     <button class="btn btn-indigo" id="LogInFormBtn" disabled><i class="fas fa-sign-in-alt"></i> Iniciar Sesion</button>
-
                 </div>
 
             </div>
