--- a/SitioWebOrtopediaVelásquez/Views/Medico/Horarios.cshtml
+++ b/SitioWebOrtopediaVelásquez/Views/Medico/Horarios.cshtml
@@ -1,29 +1,71 @@
-﻿@model List<Horarios>
-@{
-    ViewBag.Title = "Horarios";
-    ViewBag.Style = "Style_Horarios.css";
-    ViewBag.Script = "ScriptHorarios.js";
-}
-<br /><br />
-      <h2 class="grey-text text-center">Horarios</h2>
-<div class="container d-flex bd-highlight pl-5 pr-5">
-    <select class="form-control custom-select m-0 w-auto bd-highlight mr-auto" id="Tipo">
-        <option value="0" selected>Todos </option>
-        <option value="1">Lunes </option>
-        <option value="2">Martes </option>
-        <option value="3">Miercoles </option>
-        <option value="4">Jueves </option>
-        <option value="5">Viernes </option>
-    </select>
+﻿    @{
+        ViewBag.Title = "Horarios";
+        ViewBag.Style = "Style_Horarios.css";
+        ViewBag.Script = "ScriptHorarios.js";
+    }
+    <br /><br />
+    <h2 class="grey-text text-center">Horarios</h2>
+    <div class="container d-flex bd-highlight pl-5 pr-5">
+        <select class="form-control custom-select m-0 w-auto bd-highlight mr-auto" id="Tipo">
+            <option value="0" selected>Todos </option>
+            <option value="1">Lunes </option>
+            <option value="2">Martes </option>
+            <option value="3">Miercoles </option>
+            <option value="4">Jueves </option>
+            <option value="5">Viernes </option>
+        </select>
 
-    <br />
-</div>
-
-<div class="container">
-    <div class="mt-3" id="Data">
-        <img src="~/Content/img/Loading.gif" class="ml-auto mr-auto d-block" />
-        <h4 class="d-flex justify-content-center text-muted">Cargando Horarios</h4>
-        <!--Con JavaScript se cargara el catalogo-->
+        <div class="md-form mt-2 mb-0 bd-highlight">
+            <a data-toggle="modal" data-target="#HorarioModal" class="btn btn-white shadow-none Font-Family-Lato"><i class="fas fa-plus fa-1x"></i> Añadir</a>
+        </div>
+        <br />
+        <br />
     </div>
-</div>
 
+    <div class="container">
+        <div class="mt-3" id="Data">
+            <img src="~/Content/img/Loading.gif" class="ml-auto mr-auto d-block" />
+            <h4 class="d-flex justify-content-center text-muted">Cargando Horarios</h4>
+            <!--Con JavaScript se cargara el catalogo-->
+        </div>
+    </div>
+
+    <!--Modal para agregar horario -->
+    <!--Inicio de Sesion-->
+    <div class="modal fade" id="HorarioModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <h4 class="modal-title w-100 font-weight-bold">Agregar Horario</h4>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body mx-3">
+                    <div class="md-form mb-5">
+                        <i class="fas fa-calendar-alt prefix grey-text"></i>
+                        <select class="w-85 m-4_5 custom-control custom-select" id="HorariosFormDia" >
+                            <option value="1">Lunes</option>
+                            <option value="2">Martes</option>
+                            <option value="3">Miercoles</option>
+                            <option value="4">Jueves</option>
+                            <option value="5">Viernes</option>
+                        </select>
+                    </div>
+
+
+                    <div class="md-form mb-4">
+                        <i class="far fa-clock prefix grey-text"></i>
+                        <input type="time" id="HorariosFormHora"  min="07:00" max="17:00" />
+                    </div>
+
+                </div>
+                <p class="alert alert-danger w-85 ml-auto mr-auto d-none" id="Error">Horario previamente registrado</p>
+                <div class="modal-footer d-flex justify-content-center" id="m-footer-horarios">
+                    <button class="btn btn-indigo" id="HorariosFormBtn"><i class="fas fa-plus"></i>  Agregar</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <!---->
