--- a/SitioWebOrtopediaVelásquez/Views/Paciente/Citas.cshtml
+++ b/SitioWebOrtopediaVelásquez/Views/Paciente/Citas.cshtml
@@ -1,14 +1,14 @@
 ﻿@{
     ViewBag.Title = "Horarios";
     ViewBag.Style = "Style_Citas.css";
-    ViewBag.Script = "ScriptCitas.js";
+    ViewBag.Script = "ScriptHorarios.js";
 }
 <br /><br />
-<h2 class="grey-text text-center">Horarios</h2>
+<h2 class="grey-text text-center">Citas</h2>
 <div class="container d-flex bd-highlight pl-5 pr-5">
 
     <div class="md-form mt-2 mb-0 bd-highlight">
-        <a data-toggle="modal" data-target="#HorarioModal" class="btn btn-white shadow-none Font-Family-Lato"><i class="fas fa-plus fa-1x"></i> Añadir</a>
+        <a data-toggle="modal" data-target="#ModalCitas" class="btn btn-white shadow-none Font-Family-Lato"><i class="fas fa-plus fa-1x"></i> Añadir</a>
     </div>
     <br />
     <br />
@@ -17,7 +17,57 @@
 <div class="container">
     <div class="mt-3" id="Data">
         <img src="~/Content/img/Loading.gif" class="ml-auto mr-auto d-block" />
-        <h4 class="d-flex justify-content-center text-muted">Cargando Horarios</h4>
+        <h4 class="d-flex justify-content-center text-muted">Cargando Citas</h4>
         <!--Con JavaScript se cargara el catalogo-->
     </div>
 </div>
+
+
+
+
+<div class="modal fade" id="ModalCitas" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header text-center">
+                <h4 class="modal-title w-100 font-weight-bold">Registro</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body mx-3">
+
+                <div class="md-form mb-4">
+                   
+                </div>
+
+                <div class="md-form mb-4">
+                    
+                </div>
+
+                <div class="md-form mb-4">
+                   
+                </div>
+
+                <div class="md-form mb-4">
+                   
+                </div>
+
+                <div class="md-form mb-4">
+                   
+                </div>
+
+                <div class="md-form mb-4">
+                   
+                </div>
+                <div class="md-form mt-0 ">
+
+                </div>
+
+            </div>
+            <div class="modal-footer  d-flex justify-content-center" id="m-footer-registro">
+                <button class="btn btn-indigo" disabled id="RegisterFormBtn"><i class="fas fa-user-plus"></i> Registrarse</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!---->
